--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "da99.applet.js": "da99/applet.js#>2.0.0",
     "jquery": ">2.0.0",
-    "lodash": ">3.0.0"
+    "lodash": ">3.0.0",
+    "hogan.js": "twitter/hogan.js#~3.0.2"
   }
 }
