--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "da99.applet.js": "da99/applet.js#>2.0.0",
     "jquery": ">2.0.0",
     "lodash": ">3.0.0",
-    "hogan.js": "twitter/hogan.js#~3.0.2"
+    "hogan.js": "twitter/hogan.js#~3.0.2",
+    "jquery.serializeJSON": "~2.6.1"
   }
 }
