--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,6 @@
     "jquery": ">2.0.0",
     "lodash": ">3.0.0",
     "hogan.js": "twitter/hogan.js#~3.0.2",
-    "jquery.serializeJSON": "~2.6.1"
+    "jquery.serializeJSON": ">2.6.0"
   }
 }
