--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "bin": {
     "megauni.js": "megauni.js"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "^1.4.1",
+    "cheerio": "^0.19.0",
+    "co": "^4.6.0",
+    "co-fs": "^1.2.0",
+    "hogan.js": "git+https://github.com/twitter/hogan.js.git",
     "jshint": "^2.8.0",
     "koa": "^0.21.0",
+    "koa-logger": "^1.2.2",
     "koa-router": "^5.1.2",
     "koa-static": "^1.4.9",
-    "koa-logger": "^1.2.2"
+    "lodash": "^3.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
