--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "koa-logger": "^1.2.2",
     "koa-router": "^5.1.2",
     "koa-static": "^1.4.9",
-    "lodash": "^3.10.0"
+    "lodash": "^3.10.0",
+    "thunkify": "^2.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
