--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "bin": {
     "megauni.js": "megauni.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "burrito": "^0.2.12"
+  },
   "devDependencies": {
     "bower": "^1.4.1",
     "cheerio": "^0.19.0",
