--- a/bower.json
+++ b/bower.json
@@ -26,10 +26,10 @@
     "jasmine": ">2.0.0"
   },
   "dependencies": {
-    "da99.applet.js": "da99/applet.js#>2.0.0",
-    "jquery": ">2.0.0",
-    "lodash": ">3.0.0",
-    "hogan.js": "twitter/hogan.js#~3.0.2",
-    "jquery.serializeJSON": ">2.6.0"
+    "da99.applet.js": "da99/applet.js#4.2.0",
+    "jquery": "2.1.4",
+    "lodash": "3.10.1",
+    "hogan.js": "twitter/hogan.js#3.0.2",
+    "jquery.serializeJSON": "2.6.1"
   }
 }
