--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^5.1.2",
     "koa-static": "^1.4.9",
     "lodash": "^3.10.0",
+    "stylus": "^0.51.1",
     "thunkify": "^2.1.2"
   },
   "scripts": {
