--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "koa-static": "^1.4.9",
     "lodash": "^3.10.0",
     "stylus": "^0.51.1",
-    "thunkify": "^2.1.2"
+    "thunkify": "^2.1.2",
+    "typescript": "^1.6.2",
+    "babel-cli": "^6.2.0",
+    "babel-preset-es2015": "^6.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
