--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "thunkify": "^2.1.2",
     "typescript": "^1.6.2",
     "babel-cli": "^6.2.0",
-    "babel-preset-es2015": "^6.0.0"
+    "babel-preset-es2015": "^6.0.0",
+    "jshint-path-reporter": ">0.0",
+    "he": ">0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
