Updates/fixes: nginx.conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -36,23 +36,19 @@ http {
         listen       4567;
         server_name  localhost;
 
-        #charset koi8-r;
+        charset utf-8;
+        location / {
+            root   ../Public;
+            index  index.html;
+        }
+
+        error_page 404             ../404.html;
+        error_page 500 502 503 504 ../500.html;
 
         #access_log  logs/host.access.log  main;
-
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+        # location = /50x.html {
+        #     root   Public;
+        # }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
